testing webhook again

--- a/jenkinsfile
+++ b/jenkinsfile
@@ -6,15 +6,11 @@ pipeline {
              sh "./gradlew compileJava"
             }
         }
-        stage("Test stage 1") {
+        stage("Test stage") {
             steps {
                 echo 'Test stage when setup'
             }
         }
-        stage("Test stage 2") {
-            steps {
-                echo 'New Test stage when setup'
-            }
-        }
+        
     }
 }
